--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.graphActivity"></activity>
+        <activity android:name=".Activity.FeedbackActivity"></activity>
+        <activity android:name=".Activity.AboutusActivity" />
+        <activity android:name=".Activity.EditProfileActivity" />
+        <activity android:name=".Activity.LogbookActivity" />
+        <activity android:name=".Activity.graphActivity" />
         <activity android:name=".Activity.UserprofileActivity" />
         <activity android:name=".Activity.AddActivity" />
         <activity android:name=".Activity.signupActivity" />
